<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/bg_exit_dialog"
                    android:scaleType="centerCrop"
                    />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgClose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="@dimen/_10sdp"
                    android:tint="@color/white"
                    android:src="@drawable/ic_close" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_workout_white"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="@dimen/_25sdp"
                        android:textColor="@color/black"
                        android:textAllCaps="true"
                        android:text="@string/quite_exercise_msg"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnQuit"
                        style="@style/txt_fff_18"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="@dimen/btn_height"
                        android:layout_marginTop="@dimen/_50sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:background="@drawable/btn_bg_round_gradiant"

                        android:text="@string/quit" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnContinue"
                        style="@style/txt_fff_18"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_height="@dimen/btn_height"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:background="@color/black"
                        android:text="@string/str_continue" />

                    <TextView
                        android:id="@+id/tvComeback"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        style="@style/txt_fff_16"
                        android:padding="@dimen/_10sdp"
                        android:drawablePadding="@dimen/_5sdp"
                        android:drawableEnd="@drawable/icon_come_back_right"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/come_back_in_30_minute" />

                </LinearLayout>

            </FrameLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</layout>