<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="handler"
            type="com.livetv.configurator.nexus.kodiapps.presentation.activity.MetricImperialUnitsActivity.ClickHandler" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/topbar"
                layout="@layout/topbar" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/primary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:onClick="@{(v)->handler.onWeightUnitClick()}">

                <FrameLayout
                    android:id="@+id/ad_view_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:fontFamily="@font/poppins"
                    style="@style/txt_fff_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_unit" />

                <TextView
                    android:fontFamily="@font/poppins"
                    android:id="@+id/tvWeightUnit"
                    style="@style/txt_999_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="3dp"
                    android:text="@string/kg" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/_7sdp"
                android:paddingBottom="@dimen/_7sdp"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:onClick="@{(v)->handler.onHeightUnitClick()}">

                <TextView
                    android:fontFamily="@font/poppins"
                    style="@style/txt_fff_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/height_unit" />

                <TextView
                    android:fontFamily="@font/poppins"
                    android:id="@+id/tvHeightUnit"
                    style="@style/txt_999_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="3dp"
                    android:text="@string/cm" />

            </LinearLayout>

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/llAdView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:visibility="visible"/>

        <LinearLayout
            android:id="@+id/llAdViewFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" />

    </LinearLayout>

</layout>