<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="handler"
            type="com.livetv.configurator.nexus.kodiapps.presentation.activity.RestActivity.ClickHandler" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/txt_fff_22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rest"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/tvSecond"
                style="@style/txt_fff_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="00:00"
                android:textSize="35sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnContinue"
                    style="@style/txt_fff_18"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/btn_bg_round_gradiant"
                    android:backgroundTint="@color/colorSettingbg"
                    android:onClick="@{(v)->handler.onPlusTimeClick()}"
                    android:text="@string/_20s" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSkip"
                    style="@style/txt_theme_16"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="@drawable/btn_bg_round_gradiant"

                    android:backgroundTint="@color/setting_color_blue"
                    android:onClick="@{(v)->handler.onSkipClick()}"
                    android:text="@string/skip"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_rest"
            android:orientation="vertical"
            android:padding="@dimen/dp10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTotalEx"
                    style="@style/txt_fff_22"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/setting_color_blue"
                    tools:text="NEXT 2/10" />

                <TextView
                    android:id="@+id/tvTime"
                    style="@style/txt_fff_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    tools:text="00:20" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvName"
                style="@style/txt_fff_18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                tools:text="Reverse crunches" />


            <ProgressBar
                android:id="@+id/progressBarWorkOutProcess"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp"
                android:layout_margin="@dimen/_10sdp"
                android:progressDrawable="@drawable/progress_bar_linear_rest"
                tools:max="100"
                tools:progress="50" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:onClick="@{(v)->handler.onExerciseInfoClick()}"
                android:orientation="horizontal"
                android:layout_margin="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_10sdp">


                <ViewFlipper
                    android:id="@+id/viewFlipper"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</layout>